# talos-ucp-connector

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  library_proof_signing.py  pyproject.toml  ucp_e2e_verification.py
.agent/: README.md  context.md  task.md
.agent/agents/design/: brand-guardian.md  ui-designer.md  ux-researcher.md  visual-storyteller.md  whimsy-injector.md
.agent/agents/engineering/: ai-engineer.md  backend-architect.md  devops-automator.md  frontend-developer.md  mobile-app-builder.md  rapid-prototyper.md
.agent/agents/marketing/: app-store-optimizer.md  content-creator.md  growth-hacker.md  instagram-curator.md  reddit-community-builder.md  tiktok-strategist.md  twitter-engager.md
.agent/agents/product/: feedback-synthesizer.md  sprint-prioritizer.md  trend-researcher.md
.agent/agents/project-management/: experiment-tracker.md  project-shipper.md  studio-producer.md
.agent/agents/studio-operations/: analytics-reporter.md  finance-tracker.md  infrastructure-maintainer.md  legal-compliance-checker.md  support-responder.md
.agent/agents/testing/: api-tester.md  performance-benchmarker.md  test-results-analyzer.md  tool-evaluator.md  workflow-optimizer.md
.agent/workflows/: README.md
.agent/workflows/development/: run-dashboard.md  tga-workflow.md  update-readme.md
.agent/workflows/style-guides/: readme-style.md
docs/: integration-guide.md
scripts/: start.sh
src/talos_ucp_connector/: __init__.py
stubs/mcp/server/: fastmcp.pyi
tests/: test_http.py  test_live.py  test_services.py  test_signing.py
(+14 files in other folders)
