[project]
name = "talos-ucp-connector"
version = "0.1.0"
description = "Universal Commerce Protocol (UCP) Connector for Talos"
authors = [
    {name = "Talos Protocol", email = "dev@talos.network"},
]
dependencies = [
    "mcp[cli]>=0.1.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "cachetools>=5.3.0",
    "cryptography>=41.0.0",
    "rfc8785>=0.1.2",
    "http-sfv>=0.9.8",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0"
]

[project.scripts]
talos-ucp = "talos_ucp_connector.adapters.inbound.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
mypy_path = "stubs"
